--- a/src/gtk-style.css
+++ b/src/gtk-style.css
@@ -247,6 +247,11 @@
 	text-shadow: none;
 }
 
+.application-permissions-title {
+	font-weight: bold;
+	font-size: 125%;
+}
+
 .application-details-title {
 	font-weight: bold;
 	font-size: 125%;
